--- a/scripts/setup/nginx/default.conf
+++ b/scripts/setup/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen       80;
-        #listen [::]:80 default_server;
+    listen  80 default_server;
+    listen  [::]:80 default_server;
 
     server_name  {{NGINX_HOSTNAME}};
 
@@ -28,8 +28,7 @@ server {
     #
     location ~ \.php$ {
         root           /data/app;
-        # nginx will only start in web mode
-        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_pass   {{FPM_LISTEN_ADDRESS}}:{{FPM_LISTEN_PORT}};
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
