--- a/scripts/setup/php7/php-fpm.d/www.conf
+++ b/scripts/setup/php7/php-fpm.d/www.conf
@@ -33,17 +33,7 @@ group = nginx
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-;FPM_WEB_MODE_FALSE_ERASE_START
-; erase this for cluster mode
-listen = 127.0.0.1:9000
-listen.allowed_clients = 127.0.0.1
-;FPM_WEB_MODE_FALSE_ERASE_END
-
-;FPM_WEB_MODE_TRUE_ERASE_START
-; erase this for web mode
-listen = 0.0.0.0:9000
-listen.allowed_clients = any
-;FPM_WEB_MODE_TRUE_ERASE_END
+listen = {{FPM_LISTEN_ADDRESS}}:{{FPM_LISTEN_PORT}}
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
@@ -51,7 +41,8 @@ listen.allowed_clients = any
 
 ; Set permissions for unix socket, if one is used. In Linux, read/write
 ; permissions must be set in order to allow connections from a web server. Many
-; BSD-derived systems allow connections regardless of permissions.
+; BSD-derived systems allow connections regardless of permissions. The owner
+; and group can be specified either by name or by their numeric IDs.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
 ;listen.owner = nobody
@@ -124,7 +115,7 @@ pm.max_children = {{FPM_PM_MAX_CHILDREN}}
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
-; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
+; Default Value: (min_spare_servers + max_spare_servers) / 2
 pm.start_servers = {{FPM_PM_START_SERVERS}}
 
 ; The desired minimum number of idle server processes.
